k8s/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: htar
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: htar.gateway/ingress-controller
