k8s/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: dev-tools
  labels:
    app: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.15.2
          ports:
            - containerPort: 8200
              name: vault-port
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: dev-tools
  labels:
    app: vault
spec:
  type: ClusterIP
  ports:
    - port: 8200
      targetPort: 8200
      name: http
  selector:
    app: vault
